@@ -158,7 +158,7 @@ use LedgerSMB::Company_Config;
 use LedgerSMB::Locale;
 use LedgerSMB::App_State;
 use Log::Log4perl;
-use File::Copy;
+use File::Copy "cp";
 
 my $logger = Log::Log4perl->get_logger('LedgerSMB::Template');
 
@@ -387,6 +387,7 @@ sub output {
 		$self->_email_output;
         } elsif (defined $args{OUT} and $args{printmode} eq '>'){ # To file
                 cp($self->{rendered}, $args{OUT}); 
+                return if "zip" eq lc($method);
 	} elsif ('print' eq lc $method) {
 		$self->_lpr_output;
 	} elsif (defined $self->{output} or lc $method eq 'screen') {
