@@ -15,6 +15,7 @@ Changelog for 1.4.7
 * Fixed 1264, account numbers out of place on PNL (Chris T)
 * Fixed 1268, name not clickable on customer/vendor searches (Chris T)
 * Fixed 1274, error on posting payment reversals w. dd/mm/yyy dates (Chris T)
+* Fixed 1227, 1252, added batch printing via batches (Chris T)
 
 Chris T is Chris Travers
 
